# flow-pinecone-chatgpt

./: LICENSE  README.md  pyproject.toml  retrieve.py  simple_query.py
